--- a/angular17-main/src/index.html
+++ b/angular17-main/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Angular17</title>
+  <title>DigitalSouth</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/angular17-main/src/assets/Logo_Secundario.png">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://www.paypal.com/sdk/js?client-id=AQ59a7WQftmR4OEJLEPvR9MBhwmYrYSZEbaM_ymDwrzWEHeAmxIxJTdwPqEfspfe3p1SK6y1wBLrUZxt"></script>
 </head>
 <body>
